# opencl-sandbox

./: .clang-format  .gitignore  CMakeLists.txt
common/: measure.hpp  require.hpp  thread_pool.hpp  threading.hpp  utils.hpp
common_ocl/: executor.hpp  utils.hpp  wrappers.hpp
eltwise_mat_add/: CMakeLists.txt  main.cpp  mat_add_cpp_inl.hpp  mat_add_ocl_inl.hpp
eltwise_mat_sum/: CMakeLists.txt  main.cpp  mat_sum_cpp_inl.hpp  mat_sum_ocl_inl.hpp  matrix.h
hello/: hello.c
img_processor/: CMakeLists.txt  main.cpp
imgproc_app/: CMakeLists.txt  main.cpp
misc/: run_stereo_disparity.py
ocl_utils/: ocl_utils.hpp
rgb2gray_blur/: CMakeLists.txt  equal.hpp  main.cpp  profile.cpp  rgb2gray_blur_cpp_inl.hpp  rgb2gray_blur_ocl_inl.hpp  rgb2gray_blur_ocl_opt_inl.hpp  test_acc.cpp  test_perf.cpp
stereo_disparity/: CMakeLists.txt  main.cpp  pfm_reader.hpp  stereo_common.hpp  stereo_detail.hpp  stereo_disparity_cpp_inl.hpp  stereo_disparity_cpp_opt_inl.hpp  stereo_disparity_kernels.cl  stereo_disparity_ocl_inl.hpp  test_acc.cpp  test_perf.cpp
test_data/: show_image.py
zncc/: CMakeLists.txt  test_acc.cpp  zncc_cpp_inl.hpp
